--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
 
-        <script src="es6.js"></script>
+        <!-- <script src="esercizio-es5.js"></script> -->
+        <script src="esercizio-es6.js"></script>
     </body>
 </html>
